--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ x11-dl = "2.20.1"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.9", features = ["winuser"] }
+
+[target.'cfg(target_os = "macos")'.dependencies]
+core-graphics = "0.22.3"
